Fixed admin bar spacing issue

--- a/UniversityCollege_cssCleanup/scss/_base.scss
+++ b/UniversityCollege_cssCleanup/scss/_base.scss
@@ -49,3 +49,7 @@ a{
 	margin: 0 auto;
 	@include clearfix;
 }
+
+.ControlPanel, .PagingTable{
+	min-width: 1040px;
+}
