--- a/UniversityCollege_cssCleanup/scss/_header.scss
+++ b/UniversityCollege_cssCleanup/scss/_header.scss
@@ -24,7 +24,7 @@
 	color: #f8f3d2;
 	p{
 		text-align: right;
-		margin-bottom: 20px;
+		padding: 15px 0;
 	}
 	a{
 		color: #f8f3d2;
