--- a/UniversityCollege_cssCleanup/scss/_home.scss
+++ b/UniversityCollege_cssCleanup/scss/_home.scss
@@ -4,6 +4,8 @@
  * -------------------------------------------
  **/
 .main-body{
+	width: 100%;
+	min-width: 1040px;
 	background: #f2f2f2 url('img/content_bg.jpg');
 	.container{
 		background: url('img/content_bg_top.jpg') no-repeat 0 0;
