--- a/UniversityCollege_cssCleanup/skin.css
+++ b/UniversityCollege_cssCleanup/skin.css
@@ -25,201 +25,53 @@
 
 /** 
  * -------------------------------------------
- * Normalize CSS
+ * Reset CSS
  * -------------------------------------------
  **/
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-audio,
-canvas,
-video {
-  display: inline-block;
+body {
+  line-height: 1;
 }
 
-audio:not([controls]) {
-  display: none;
-  height: 0;
+ol, ul {
+  list-style: none;
+  list-style-position: outside;
+  list-style-type: circle;
 }
 
-[hidden] {
-  display: none;
+blockquote, q {
+  quotes: none;
 }
 
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-a:focus {
-  outline: thin dotted;
-}
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-b,
-strong {
-  font-weight: bold;
-}
-
-dfn {
-  font-style: italic;
-}
-
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-
-pre {
-  white-space: pre-wrap;
-}
-
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-img {
-  border: 0;
-}
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-figure {
-  margin: 0;
-}
-
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-legend {
-  border: 0;
-  padding: 0;
-}
-
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-}
-
-button,
-input {
-  line-height: normal;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-textarea {
-  overflow: auto;
-  vertical-align: top;
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
 }
 
 table {
@@ -307,6 +159,10 @@ a:hover {
 }
 .container:after {
   clear: both;
+}
+
+.ControlPanel, .PagingTable {
+  min-width: 1040px;
 }
 
 div.cta {
@@ -555,7 +411,7 @@ span.JobsLink a {
 }
 #user p {
   text-align: right;
-  margin-bottom: 20px;
+  padding: 15px 0;
 }
 #user a {
   color: #f8f3d2;
@@ -721,22 +577,23 @@ span.JobsLink a {
  * Footer CSS
  * -------------------------------------------
  **/
-.footer {
+.all .footer {
   width: 100%;
-  min-width: 1040px;
   background: #121212;
-  text-shadow: 0px 1px 0px #000000;
-  color: #858372;
   zoom: 1;
 }
-.footer:before, .footer:after {
+.all .footer:before, .all .footer:after {
   content: "\0020";
   display: block;
   height: 0;
   overflow: hidden;
 }
-.footer:after {
+.all .footer:after {
   clear: both;
+}
+.all .footer .container {
+  text-shadow: 0px 1px 0px #000000;
+  color: #858372;
 }
 
 #sub-navigation {
@@ -1005,6 +862,8 @@ span.JobsLink a {
  * -------------------------------------------
  **/
 .main-body {
+  width: 100%;
+  min-width: 1040px;
   background: #f2f2f2 url("img/content_bg.jpg");
 }
 .main-body .container {
